[package]
name = "circles_drawing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.23.14", default_features = false, features = ["pnm"] }
rand = "0.8.4"
ordered-float = "2.10.0"