[package]
name = "circles_drawing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = { version = "0.23.14", default_features = false, features = ["pnm"] }
ordered-float = "2.10.0"
wasm-bindgen = "0.2.79"

[dev-dependencies]
rand = "0.8.4"